tests/baselines/reference/parseUnaryExpressionNoTypeAssertionInJsx2.errors.txt
index.js(2,12): error TS17014: JSX fragment has no corresponding closing tag.
index.js(2,13): error TS6267: Cannot find name 'React', the fragment factory, which is required to use fragments.
index.js(2,13): error TS17004: Cannot use JSX unless the '--jsx' flag is provided.
index.js(3,1): error TS1005: '</' expected.


==== index.js (4 errors) ====
    const x = "oops";
    const y = + <> x;
               ~~~
!!! error TS17014: JSX fragment has no corresponding closing tag.
                ~~
!!! error TS6267: Cannot find name 'React', the fragment factory, which is required to use fragments.
                ~~
!!! error TS17004: Cannot use JSX unless the '--jsx' flag is provided.
    
    
!!! error TS1005: '</' expected.